--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -41,6 +41,9 @@
                 </div>
             </nav>
         {% endblock %}
-        {% block body %}{% endblock %}
+
+        <div class="container">
+            {% block body %}{% endblock %}
+        </div>
     </body>
 </html>
