--- a/templates/post/index.html.twig
+++ b/templates/post/index.html.twig
@@ -12,8 +12,9 @@
                             <h5 class="card-title">{{post.title}}</h5>
                         {% endif %}
                         <p class="card-text">{{post.content}}</p>
-                        <a href="#" class="btn btn-danger">supprimer</a>
-                        <a href="#" class="btn btn-warning">modifier</a>
+                        <a href="{{ path('delete-post', {'id' : post.id}) }}" class="btn btn-danger">supprimer</a>
+                        <a href="{{ path('edit-post', {'id' : post.id}) }}" class="btn btn-warning">modifier</a>
+                        <a href="{{ path('copy-post', {'id' : post.id}) }}" class="btn btn-info">Copier</a>
                     </div>
                 </div>
             {% endfor %}
