--- a/templates/user/form.html.twig
+++ b/templates/user/form.html.twig
@@ -2,8 +2,18 @@
 
 {% block body %}
     {{ form_start(form, {'attr': {'class': 'container'}}) }}
+    {{form_row(form.username)}}
+    {{form_label(form.password)}}
+    <div class="input-group mb-3">
+        {{form_widget(form.password)}}
+        <span role="button" class="input-group-text" onclick="togglePasword()">
+            <i class="bi bi-eye" id="eye"></i>
+            <i class="bi bi-eye-slash d-none" id="eye-slash"></i>
+        </span>
+    </div>
+    {{form_errors(form.password)}}
     {{ form_rest(form) }}
-    <input class="btn btn-success" type="submit" value="Créer le compte">
+    <input class="btn btn-success mt-2" type="submit" value="Créer le compte">
     <div>
         <a href="/login" class="btn btn-link">Se connecter</a>
     </div>
