--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -38,8 +38,8 @@
                                 </li>
                             {% endif %}
                         </ul>
-                        <form class="d-flex">
-                            <input class="form-control me-2" type="search" placeholder="Rechercher" aria-label="Search">
+                        <form class="d-flex" method="POST">
+                            <input class="form-control me-2" type="search" placeholder="Rechercher" name="search" aria-label="Search">
                             <button class="btn btn-outline-primary" type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
                         </form>
                         {% if app.user %}
